Moved client to this new repository and created the domain

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,8 @@ pom.xml.releaseBackup
 pom.xml.versionsBackup
 pom.xml.next
 release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
+fenix-framework.properties
+.classpath
+.project
+.settings
+notifications.properties
