--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 
     <modules>
         <module>client</module>
+        <module>client-ff</module>
         <module>test-client</module>
     </modules>
 
